--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "ci-fi",
   "description": "a simple and easy continous integration server",
   "dependencies": {
-    "express": "~3.3.4"
+    "express": "~3.3.4",
+    "jade": "~0.33.0",
+    "underscore": "~1.5.1",
+    "mongoskin": "~0.6.0",
+    "inflection": "~1.2.6",
+    "bcrypt": "~0.7.6"
   }
 }
