--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "underscore": "~1.5.1",
     "mongoskin": "~0.6.0",
     "inflection": "~1.2.6",
-    "bcrypt": "~0.7.6"
+    "bcrypt": "~0.7.6",
+    "messenger": "0.0.9",
+    "shelljs": "~0.1.4"
   }
 }
